<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/activity_main_clientes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/clientes" />

    <Button
        android:id="@+id/activity_main_contas"
        android:layout_below="@+id/activity_main_clientes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/contas" />

    <Button
        android:id="@+id/activity_main_transferencia"
        android:layout_below="@id/activity_main_contas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/transferencias" />

    <Button
        android:id="@+id/activity_main_deposito"
        android:layout_below="@id/activity_main_transferencia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/depositos" />

    <Button
        android:id="@+id/activity_main_saque"
        android:layout_below="@id/activity_main_deposito"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/saques" />

</RelativeLayout>